<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.group6a_hw04.group6a_hw04.AppDetails">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/linearLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="App Title Here"
                    android:id="@+id/textViewAppTitle"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Release Date Here"
                    android:id="@+id/textViewAppReleaseDate"
                    android:layout_below="@+id/textViewAppTitle"
                    android:layout_centerHorizontal="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewThumbnail"
                    android:layout_below="@+id/linearLayout"
                    android:layout_centerHorizontal="true"
                    android:src="@android:drawable/btn_star_big_on"
                    android:minHeight="200dp"
                    android:minWidth="300dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayoutTextFields">

                <TextView
                    style="@style/layoutSpacing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/by"
                    android:id="@+id/textViewByTag" />

                <TextView
                    style="@style/layoutSpacing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/price"
                    android:id="@+id/textViewPriceTag" />

                <TextView
                    style="@style/layoutSpacing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/category"
                    android:id="@+id/textViewCategoryTag" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/appLinkInSore"
                    android:id="@+id/textViewLinkTag" />

                <WebView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/webViewAppL:ink" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
